--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,801 @@
-.App {
+/************ Custom Font ************/
+@font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Bold.ttf');
+	font-weight: 700;
+}
+@font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Medium.ttf');
+	font-weight: 500;
+}
+@font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Book.ttf');
+	font-weight: 400;
+}
+
+
+
+/************ Default Css ************/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 75px;
+}
+body {
+  background: linear-gradient(132deg, #2a1a74,#2e3b5b, #085c7b60, rgb(112, 0, 81), rgb(123, 52, 129));
+  background-size: 400% 400%;
+  animation: BackgroundGradient 20s ease infinite;
+  font-family: 'Centra', sans-serif !important;
+  font-weight: 400;
+}
+
+@keyframes BackgroundGradient {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
+}
+
+p, a, li, button, ul {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  height: auto;
+
+}
+
+button {
+  border: 0;
+  background-color: transparent;
+}
+
+input:focus, textarea:focus, select:focus {
+  outline: none;
+}
+
+
+
+@media screen and (max-width: 1010px){
+  #nav{
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 1010px){
+  .headAlign{
+    display: inline-block !important;
+  }
+  .alignment{
+    display: inline-block !important;
+  }
+  .experiences .container{
+    flex-wrap: wrap;
+
+  }
+  .spacing h1 {
+    margin-top: 50px !important;
+  
+  }
+  .spacing {
+    padding: 0%;
+  }
+  .banner .header {
+    min-width: 600px;
+  }
+
+  .banner p {
+    text-align: center;
+  }
+  .alignment .box1{
+    margin-right: auto;
+  }
+  .banner .headAlign {
+    width: auto;
+  }
+  .banner {
+   
+    height: auto;
+    margin: 0 auto;
+    padding: 10px;
+    position: relative;
+    max-width: 645px;
+  }
+  .banner .info {
+    display: flex;
+    align-self: center;
+    justify-self: center;
+  }
+  #hamburger-menu {
+    visibility: visible !important;
+  }
+
+ 
+}
+
+  @media screen and (max-width: 500px){
+  .h1 {
+      padding-top: 100px;
+    }
+}
+@media screen and (max-width: 769px){
+  .banner .header {
+      min-width: 300px;
+    }
+
+}
+
+
+.scrolled {
+  background-color: #dcdcdc5b;
+  border-bottom: 1px solid rgba(227, 255, 254, 0.655);
+  width: 100%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+
+
+}
+
+.a{
+  text-decoration: none;
+  color: #1b1b1b;
+  
+}
+
+.a2{
+  text-decoration: none;
+  color: #1b1b1b;
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 5%;
+  letter-spacing: 0.8px;
+  display: flex;
+  align-items: center;
+}
+  
+
+  nav {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 9999;
+    transition:  0.32s ease-in-out;
+    right: 0;
+    left: 0;
+    display: table;
+    margin: 0 auto;
+    background-color: rgba(239, 244, 245, 0.341);
+  }
+
+  
+  nav a {
+    position: relative;
+   /*width: 16.66%;*/
+    width: 20%;
+    display: table-cell;
+    text-align: center;
+    color: #202020f8;
+    text-decoration: none;
+    padding: 10px 50px;
+
+
+  }
+  
+  nav a:before,
+  nav a:after {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 0.2s ease transform;
+ 
+  }
+  
+  nav a:before {
+    top: 0px;
+    left: 10px;
+    width: 6px;
+    height: 6px;
+  }
+  
+  nav a:after {
+    top: 5px;
+    left: 18px;
+    width: 4px;
+    height: 4px;
+
+  }
+  
+  #indicator {
+    position: absolute;
+    left: 2%;
+    bottom: 0;
+    height: 3px;
+    border-radius: 5px;
+    transition: 0.2s ease left;
+    visibility: hidden;
+  }
+  
+  nav a:hover {
+    color: #ffffff;
+  }
+  
+  nav a:hover:before,
+  nav a:hover:after {
+    transform: scale(1);
+  }
+
+  
+  nav a:nth-child(1):hover ~ #indicator {
+    background: linear-gradient(130deg, rgb(218, 250, 252), rgb(35, 100, 130));
+    /*left: 2.5%;*/
+    left: 4%;
+    visibility: visible;
+    width: 12%;
+  }
+  
+  nav a:nth-child(2):hover ~ #indicator {
+    /*left: 19%;*/
+    left: 24%;
+    background: linear-gradient(130deg, rgb(193, 252, 255), rgb(35, 100, 130));
+    visibility: visible;
+    width: 12%;
+  }
+  
+  nav a:nth-child(3):hover ~ #indicator {
+    /*left: 35.5%;*/
+    left: 44%;
+    background: linear-gradient(130deg, rgb(193, 252, 255), rgb(35, 100, 130));
+    visibility: visible;
+    width: 12%;
+  }
+
+  nav a:nth-child(4):hover ~ #indicator {
+    /*left: 52.5%;*/
+    left: 64%;
+    background: linear-gradient(130deg, rgb(193, 252, 255), rgb(35, 100, 130));
+    visibility: visible;
+    width: 12%;
+  }
+
+  nav a:nth-child(5):hover ~ #indicator {
+    /*left: 69%;*/
+    left: 84%;
+    background: linear-gradient(130deg, rgb(193, 252, 255), rgb(35, 100, 130));
+    visibility: visible;
+    width: 12%;
+  }
+
+  nav a:nth-child(6):hover ~ #indicator {
+    left: 85.5%;
+    background: linear-gradient(130deg, rgb(193, 252, 255), rgb(35, 100, 130));
+    visibility: visible;
+    width: 12%;
+  }
+
+
+/************ Banner Css ************/
+.banner {
+  color: #1b1b1b;
+  margin-top: 50px;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-bottom: 5%;
+}
+
+
+h1 {
+  font-weight: 700;
+  padding-top: 100px;
+  margin: auto;
+  width: 50%;
+  text-align: center;
+  
+}
+.banner p {
+  color: #1b1b1b;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  width: 96%;
+  margin-top: 5%;
+  max-width: 700px;
+
+}
+.banner button {
+  color: #1b1b1b;
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 5%;
+  letter-spacing: 0.8px;
+  display: flex;
+  align-items: center;
+}
+.banner button svg {
+  font-size: 25px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  line-height: 1;
+  margin-left: 5%;
+}
+.banner button:hover svg {
+  margin-left: 25px;
+}
+.banner a svg {
+  font-size: 25px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  line-height: 1;
+
+}
+.banner a:hover svg {
+  margin-left: 25px;
+}
+.banner a{
+  margin-right: 25px;
+}
+
+.banner img {
+  width: 40%;
+  display: fixed;
+  align-self: center;
+  border-radius: 500px;
+  width: 350px;
+  height: 350px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+#home {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+
+@keyframes updown {
+    0% {
+        transform: translateY(-20px);
+    }
+    50% {
+        transform: translateY(20px);
+    }
+    100% {
+        transform: translateY(-20px);
+    }
+}
+.txt-rotate > .wrap {
+  border-right: 0.08em solid #c8f6f694;
+  color: rgba(0, 0, 0, 0.685);
+  
+}
+
+.header {
+  min-width: 575px;
+  font-size: 45px;
+}
+
+.banner a2 {
+  color: #1b1b1b;
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 5%;
+  letter-spacing: 0.8px;
+  display: flex;
+  align-items: center;
+
+}
+
+
+/************ Skills Css ************/
+.skill {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  position: relative;
+}
+.skill-bx {
+  border-radius: 64px;
+  text-align: center;
+  padding: 60px 50px;
+  margin-top: -60px;
+}
+.skill h2 {
+	font-size: 45px;
+	font-weight: 700;
+}
+.skill p {
+    color: #202020;
+    font-size: 18px;
+    letter-spacing: 0.8px;
+    line-height: 1.5em;
+    margin: 14px 0 75px 0;
+}
+.skill-slider {
+  width: 80%;
+  margin: 0 auto;
+  position: relative;
+}
+.skill-slider .item img {
+  width: 50%;
+  margin: 0 auto 15px auto;
+}
+.background-image-left {
+  top: 28%;
+  position: absolute;
+  bottom: 0;
+  width: 40%;
+  z-index: -4;
+}
+
+/************ Projects Css ************/
+.project {
+  position: relative;
+  
+}
+.project h2 {
+	font-size: 45px;
+	font-weight: 700;
+  text-align: center;
+}
+.project p {
+  color: #272727;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px auto 30px auto;
+  text-align: center;
+  width: 56%;
+}
+
+
+/************ Projects Css ************/
+
+
+/************ Footer Css ************/
+.footer {
+  padding: 0 0  0;
+  background-image: url("");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer p {
+  font-weight: 400;
+  font-size: 14px;
+  color: #1b1b1b87;
+  letter-spacing: 0.5px;
+  margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/******Experience******/
+
+.experience {
+  padding-bottom: 5%;
+  position: relative;
+ 
+}
+
+#e1 {
+  border: 1px solid #000;
+  padding: 2.5% 0%;
+  margin-bottom: 5%;
+  margin-right: 5%;
+  margin-left: 5%;
+  margin-top: 2.5%;
+  border-radius: 40px;
+
+}
+
+#e1:hover {
+  background-color: rgba(253, 253, 253, 0.078);
+  margin-right: 0;
+  margin-left: 0;
+  transition: .3s ease-out;
+
+}
+
+#e2, #e3 {
+  border: 1px solid #000;
+  padding: 2.5% 0%;
+  border-radius: 40px;
+}
+
+#e4{
+  border: 1px solid #000;
+  padding: 2.5% 0%;
+  margin-top: 5%;
+  border-radius: 40px;
+}
+
+.experiences h2 {
+  font-size: 45px;
+	font-weight: 700;
+  
+}
+
+.experiences {
+  color: #272727;
+  font-size: 20px;
+  letter-spacing: 0.8px;
+
+  margin: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 50%;
+  font-weight: 500;
+  
+}
+
+.experiences p{
+  color: #272727;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 80%;
+  font-weight: 400;
+
+}
+
+.experiences h1{
+  color: #272727;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 50%;
+  font-weight: 400;
+
+}
+
+.line {
+  content: "";  
+    display: block;
+    margin: 0 auto; 
+    width: 90%; 
+    padding-top: 20px; 
+    border-bottom: 1px solid rgba(0, 0, 0, 0.447);
+    margin-bottom: 5%;
+}
+
+.alignment{
+ display: inline-flex;
+ margin: auto;
+ width: 100%;
+
+}
+
+:root {
+  --d: 8000ms;
+  --angle: 90deg;
+  --c1: rgba(168, 239, 255, 1);
+  --c2: rgba(168, 239, 255, 0.1);
+}
+
+@property --angle {
+  syntax: '<angle>';
+  initial-value: 90deg;
+  inherits: true;
+}
+
+@keyframes borderRotate {
+  100% {
+    --angle: 450deg;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box1 {
+  border-radius: 50%;
+  min-width: 360px;
+  max-width: 360px;
+  min-height: 360px;
+  max-height: 360px;
+  margin-right: 0;
+  margin-left: auto;
+  opacity: .90;
+  position: relative;
+  animation: borderRotate var(--d) linear infinite;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  overflow: hidden;
+  background: conic-gradient(
+    from var(--angle),
+    var(--c2),
+    var(--c1) 0.1turn,
+    var(--c1) 0.15turn,
+    var(--c2) 0.25turn
+  );
+  background-clip: content-box;
+}
+
+.info {
+  display: inline-flex;
+
+}
+
+.spacing{
+  margin-left: 5%;
+}
+
+
+.experiences .container {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+
+}
+
+.experiences .container .card {
+  position: relative;
+  min-width: 450px;
+  height: 370px;
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
+    inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+    5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  margin: 5% 5%;
+  transition: 0.5s;
+  background-color: rgba(203, 203, 203, 0.269);
+}
+
+
+.experiences .container .card .box {
+  position: absolute;
+  top: 40px;
+  left: 20px;
+  right: 20px;
+  bottom: 40px;
+  background: #00000014;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.experiences .container .card .box:hover {
+  transform: translateY(-50px);
+  background-color: #ffffff57;
+}
+
+.experiences .container .card .box:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: rgba(154, 66, 66, 0.03);
+}
+
+.experiences .container .card .box .content {
+  padding: 20px;
+  text-align: center;
+}
+
+
+.experiences .container .card .box .content h2 {
+  top: 10px;
+  font-size: 15px;
+  color: #0000007c;
+}
+
+.experiences .container .card .box .content h3 {
+  font-size: 20px;
+  color: #000000d3;
+  z-index: 1;
+  transition: 0.5s;
+  margin-bottom: 15px;
+}
+
+.experiences .container .card .box .content p {
+  font-size: 15px;
+  font-weight: 300;
+  color: #000000d0;
+  z-index: 1;
+  transition: 0.5s;
+  margin-right: 0;
+  margin-left: 0;
+  width: 370px;
+}
+
+.experiences .container .card .box .content a {
+  position: relative;
+  display: inline-block;
+  padding: 8px 20px;
+  background: black;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #0000007c;
+  margin-top: 20px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.experiences .container .card .box .content a:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
+  background: #ffffff;
+  color: #000;
+}
+
+.headAlign {
+
+    height: auto;
+    margin: 0 auto;
+    padding: 10px;
+    position: relative;
+}
+
+/* new navbar hamburger code stuff */
+
+#hamburger-menu {
+  visibility: hidden;
+}
+
+.hamburger-button {
+  color: #202020f8;
+  width: 100%;
+  margin-left: 35px;
+  text-align: left;
+  font-size: 28px;
+  cursor: pointer;
+  
+}
+.nav-links {
+  display: none;
+  color: white;
+  width: 100%;
+
+}
+.nav-links a {
+  display: block;
+  padding: 15px;
+  padding-left: 70px;
+  color: #202020f8;
+  text-decoration: none;
+  width: 100%;
+  text-align: left;
+  border-top: 1px solid rgba(214, 214, 214, 0.214);
+  border-bottom: none;
+}
+.nav-links a:hover {
+  background-color: #ffffff82;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-links {
+  display: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-links.open {
+  display: block;
 }
