--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ input:focus, textarea:focus, select:focus {
 
 
 .scrolled {
-  background-color: #dcdcdc5b;
+  background-color: #dcdcdcaf;
   border-bottom: 1px solid rgba(227, 255, 254, 0.655);
   width: 100%;
   padding-top: 0px;
@@ -766,7 +766,7 @@ h1 {
   width: 100%;
   margin-left: 35px;
   text-align: left;
-  font-size: 28px;
+  font-size: 22px;
   cursor: pointer;
   
 }
@@ -779,16 +779,18 @@ h1 {
 .nav-links a {
   display: block;
   padding: 15px;
-  padding-left: 70px;
   color: #202020f8;
   text-decoration: none;
-  width: 100%;
-  text-align: left;
-  border-top: 1px solid rgba(214, 214, 214, 0.214);
-  border-bottom: none;
+  width: 70%;
+  margin: 10px auto;
+  border: 1px solid rgb(214, 214, 214);
+  border-radius: 500px;
+  background-color: white;
+
+
 }
 .nav-links a:hover {
-  background-color: #ffffff82;
+  background-color: #ffffff80;
   color: white;
 }
 
