--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,16 @@ input:focus, textarea:focus, select:focus {
     }
 
 }
+@media screen and (max-width: 600px) {
+  .box1 {
+    width: 80%; 
+    height: auto;
+    max-width: 300px;
+    max-height: 300px;
+
+    margin: 0 auto;
+  }
+}
 
 
 .scrolled {
