--- a/src/App.css
+++ b/src/App.css
@@ -141,11 +141,9 @@ input:focus, textarea:focus, select:focus {
 }
 @media screen and (max-width: 600px) {
   .box1 {
-    width: 50%;      
-    height: auto;        
-    max-width: 200px;      
-    max-height: 200px;     
-    margin: 0 auto;       
+    width: 40vw;    /* 40% of the viewport width */
+    height: 40vw;   /* Same as width to maintain a square shape */
+    margin: 0 auto;
   }
 }
 
