--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@ input:focus, textarea:focus, select:focus {
   }
 }
 
+
 @media screen and (max-width: 1010px){
   .headAlign{
     display: inline-block !important;
@@ -518,7 +519,6 @@ h1 {
 .experiences h2 {
   font-size: 45px;
 	font-weight: 700;
-  
 }
 
 .experiences {
@@ -779,4 +779,8 @@ h1 {
 
 .nav-links.open {
   display: block;
+}
+
+.gap{
+  margin-top: 75px;
 }
