--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -8,8 +8,9 @@
 }
 
 h1 {
-  font-weight: 700;
+  font-weight: 500;
   padding-top: 120px;
+  padding-bottom: 20px;
   margin: auto;
   width: 50%;
   text-align: center;
@@ -84,6 +85,7 @@ h1 {
   min-width: 575px;
   font-size: 45px;
 }
+
 
 .a {
   text-decoration: none;
